[tool.poetry]
name = "pi-pulse"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
torch = "*"
numpy = "*"
jupyter = "*"
matplotlib = "*"
pandas = "*"
loguru = "*"
tqdm = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
